# CineReserve-API

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: v1.0.0.asta  v1.0.1.asta
src/: celerybeat-schedule-shm  celerybeat-schedule-wal
src/accounts/: serializers.py  services.py  urls.py  views.py
src/base/: filters.py  models.py
src/base/management/commands/: seed.py
src/core/: celery.py  settings.py  urls.py
src/movie/: filters.py  models.py  serializers.py  urls.py  views.py
src/movie/migrations/: 0001_initial.py
src/order/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/showtime/: filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/showtime/migrations/: 0001_initial.py
src/theater/: models.py
src/theater/migrations/: 0001_initial.py
