[project]
name = "cinereserve-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Souza",email = "pedrohcsouza2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "django-filter (>=25.2,<26.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "flower (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "core", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
